add input of type file with event handler

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,11 @@
 	</head>
 	<body>
 		<p>Hello {{email}}</p>
+		<input type="file" id="fileUpload" onchange="handleFileUpload()" />
+		<script>
+			function handleFileUpload() {
+				console.log("handleFileUpload is triggered");
+			}
+		</script>
 	</body>
 </html>
