--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,30 @@
 	</head>
 	<body>
 		<p>Hello {{email}}</p>
-		<input type="file" id="fileUpload" onchange="handleFileUpload()" />
+		<input type="file" id="fileUpload" onchange="handleFileUpload(event)" />
 		<script>
-			function handleFileUpload() {
+			function handleFileUpload(e) {
 				console.log("handleFileUpload is triggered");
+				const file = e.target.files[0];
+				console.log(
+					sha256(file).then((fileHash) => {
+						console.log(fileHash);
+					})
+				);
+			}
+			async function sha256(message) {
+				// encode as UTF-8
+				const msgBuffer = new TextEncoder().encode(message);
+
+				// hash the message
+				const hashBuffer = await crypto.subtle.digest("SHA-256", msgBuffer);
+
+				// convert ArrayBuffer to Array
+				const hashArray = Array.from(new Uint8Array(hashBuffer));
+
+				// convert bytes to hex string
+				const hashHex = hashArray.map((b) => b.toString(16).padStart(2, "0")).join("");
+				return hashHex;
 			}
 		</script>
 	</body>
